Initialisation - Work in progress

--- a/webapp/WEB-INF/templates/skin/plugins/fcsample/demarche-form.html
+++ b/webapp/WEB-INF/templates/skin/plugins/fcsample/demarche-form.html
@@ -6,7 +6,9 @@
 
     <div class="col-md-6 well">
 
-        <form method="POST" id="crecheForm" class="form-horizontal" target="authFranceConnect">
+        <form method="POST" id="crecheForm" class="form-horizontal" action="jsp/site/Portal.jsp">
+            <input type="hidden" name="page" value="fcsample" />
+            <input type="hidden" name="action" value="processForm" />
             <fieldset>
 
                 <!-- Form Name -->
