--- a/webapp/WEB-INF/templates/skin/plugins/fcsample/home.html
+++ b/webapp/WEB-INF/templates/skin/plugins/fcsample/home.html
@@ -1,3 +1,5 @@
+<br>
+<br>
 <div class="row-fluid">
     
     <#include "includes/panel.html" />
@@ -15,9 +17,10 @@
 
         <h4>Identifiez-vous pour accéder aux démarches</h4>
         
-        <a class="btn btn-primary" href="jsp/site/Portal.jsp?page=fcsample&view=demarcheForm">
+        <a class="btn btn-primary" href="jsp/site/Portal.jsp?page=fcsample&action=startDemarche">
             Démarrer la démarche
         </a>
+        via <img src="images/local/skin/plugins/fcsample/logoFC.png" alt="connexion avec FranceConnect"/>
 
     </div>
 </div>
